# cub3d

./: CMakeLists.txt  Makefile  a.out  arch.txt  cub3D  main.c  map_validate.c  mlx.c  texture_parse.c  world_parse.c
binary/: cub3d
cp/: main.c  map_validate.c  texture_parse.c
get_next_line/: get_next_line.c  get_next_line_utils.c
includes/: cub3d.h  get_next_line.h  libft.h
map/: map.cub
source/: a.out  data_parsing.c  double_id_check.c  elem_parse.c  elem_parse_utils.c  get_next_line.c  get_next_line_utils.c  init_utils.c  key_on_off.c  main.c  main_bonus.c  map_validate.c  map_validate_utils.c  mlx.c  mlx2.c  mlx_utils.c  mm.c  movement.c  movement_bonus.c  r_parse_utils.c  render.c  render_bonus.c  render_minimap.c  render_sprite.c  render_sprite_utils.c  render_walls.c  render_walls_utils.c  render_walls_utils2.c  rotation.c  sprite_player_init.c  texture_init.c  texture_parse.c  validate.c  world_parse.c
textures/: 2.xpm  barrel.xpm  colorstone.xpm  east.xpm  greystone.xpm  north.xpm  pillar.xpm  redbrick.xpm  south.xpm  west.xpm  wood.xp
