cmake_minimum_required(VERSION 3.17)
project(cub3d)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS "-lmlx -framework OpenGL -framework AppKit")
link_directories(/usr/local/lib)
include_directories(/usr/local/include)
#file(GLOB SOURCE_LIBFT "libft/*.c") #ПРОХОДИТ ПО ПАПКЕ СОБИРАЯ ВСЕ ФАИЛЫ
#file(GLOB LIBRARIES "libraries/libmlx.dylib")
include_directories(source)
include_directories(libraries)
include_directories(includes)
include_directories(libft)
add_executable(cub3d
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strdup.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        includes/libft.h
        includes/get_next_line.h
        includes/mlx.h
        source/get_next_line.c
        source/get_next_line_utils.c
        libraries/libft.a
        includes/cub3d.h
        source/main.c
        source/map_validate.c
        source/render.c
        source/elem_parse.c
        source/data_parsing.c
        source/render_walls.c
        source/movement.c
        source/rotation.c
        source/key_on_off.c
        source/mlx_utils.c
        source/render_walls_utils.c
        source/render_walls_utils2.c
        source/render_sprite.c
        source/texture_init.c
        source/sprite_player_init.c
        source/render_sprite_utils.c
        source/init_utils.c)